# Analyze_DICOMO

./: CMakeLists.txt  dicomo_data.csv  dicomo_numeric.csv  dicomo_onlydata.csv  human_onlyvector.csv  human_vector.csv  prefectures_indexies.csv  prefectures_onlydata.csv  prefectures_onlyvector.csv  prefectures_vector.csv
camp_predict/: CMakeLists.txt  camp_additional_data.csv  camp_data.csv  camp_onlydata.csv  camp_timethink_data.csv  prefectures_data.csv  prefectures_vector.csv
camp_predict/original/: camp_data.csv
camp_predict/scripts/: deep_learning.py  model
camp_predict/src/: convert_prefectures_to_indexies.cpp  create_n_hot_vector.cpp
dicomo_predict/: CMakeLists.txt  dicomo_numeric.csv  human_vector.csv  humans.csv  prefectures.csv  prefectures_data.csv  result  unique_human.csv
dicomo_predict/scripts/: model
dicomo_predict/src/: create_index_data.cpp  create_n_hot_vector.cpp
original/: additional_dicomo_data.csv  main_dicomo_data.csv  sub_dicomo_data.csv
scripts/: deep_learning.py
src/: create_human_vector.cpp
